--- a/test.html
+++ b/test.html
@@ -1,7 +1,27 @@
 <html>
-    <head></head>
+    <head>THE COMMANDS FOR GIT HUB INSTALLATION</head>
     <body>
-        hiii gud mrng
-        kkkkkk
+        git --version
+	=>to identifie the version of git
+git init
+	=>initialize the git
+git add
+	=>to add one file to staging area
+git add.
+	=>to add all file to staging area
+git rm--cached file name
+	=>to remove the file from to staging area
+git status
+	=>to know the current status of git
+git  commit -m "1st commit"
+	=>to commit
+git log
+	=>to view the log file 
+git restore .
+	=>to undo changes
+git branch -M main
+git remote add origin https://github.com/vismaya-mg/proj.git
+git push -u origin main
+        
     </body>
 </html>
